# orchard-ml

./: .codecov.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  forge.py  health_check.py  main.py  mkdocs.yml  mutmut-registry.yaml  optimize.py  pyproject.toml  requirements.txt  smoke_test.py  sonar-project.properties  train_bloodmnist.py  trainer.py  utils.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: badges.yml  ci.yml  codeql.yml  dependabot-uv.yml  docker.yml  docs.yml  publish.yml  release.yml
docker/: Dockerfile
docs/: gen_ref_pages.py  index.md
docs/artifacts/: training_summary.xlsx
docs/guide/: ARCHITECTURE.md  ARTIFACTS.md  CONFIGURATION.md  DOCKER.md  EXPORT.md  FRAMEWORK.md  MUTANTS.md  OPTIMIZATION.md  TESTING.md  TRACKING.md
notebooks/: 01_quickstart_bloodmnist_cpu.ipynb  02_galaxy10_optuna_model_search.ipynb  03_edge_deploy_onnx_quantize.ipynb
orchard/: README.md  __init__.py  cli_app.py  exceptions.py
orchard/architectures/: __init__.py  _morphing.py  convnext_tiny.py  efficientnet_b0.py  factory.py  fasterrcnn.py  mini_cnn.py  resnet_18.py  timm_backbone.py  vit_tiny.py
orchard/core/: __init__.py  cli.py  orchestrator.py  task_protocols.py  task_registry.py
orchard/data_handler/: __init__.py  collate.py  data_explorer.py  dataset.py  detection_dataset.py  dispatcher.py  factory.py  fetcher.py  loader.py  synthetic.py  transforms.py
orchard/evaluation/: __init__.py  detection_visualization.py  engine.py  evaluation_pipeline.py  evaluator.py  metrics.py  pipeline.py  plot_context.py  reporting.py  tta.py  visualization.py
orchard/export/: __init__.py  onnx_exporter.py  validation.py
orchard/models/: __init__.py  efficientnet_b0.py  factory.py  mini_cnn.py  resnet_18.py  resnet_18_adapted.py  vit_tiny.py
orchard/optimization/: __init__.py  _param_mapping.py  early_stopping.py  objective.py  orchestrator.py  search_spaces.py
orchard/pipeline/: __init__.py  phases.py
orchard/tasks/: __init__.py
orchard/tracking/: tracker.py
orchard/trainer/: __init__.py  _loop.py  _scheduling.py  engine.py  losses.py  setup.py  trainer.py
recipes/: config.yaml  config_cifar10_mini_cnn.yaml  config_cifar10_resnet_18.yaml  config_convnext_tiny.yaml  config_efficientnet_b0.yaml  config_fasterrcnn.yaml  config_galaxy10_efficientnet_b0.yaml  config_galaxy10_vit_tiny.yaml  config_mini_cnn.yaml  config_mini_cnn_64.yaml  config_resnet_18.yaml  config_resnet_18_adapted.yaml  config_timm_convnextv2_nano_128.yaml  config_timm_efficientnet_lite0_128.yaml  config_timm_mobilenetv3.yaml  config_vit_tiny.yaml  optuna_128.yaml  optuna_64.yaml  optuna_cifar100_mini_cnn.yaml  optuna_cifar100_pretrained.yaml  optuna_cifar100_resnet_18.yaml  optuna_convnext_tiny.yaml  optuna_efficientnet_b0.yaml  optuna_fasterrcnn.yaml  optuna_galaxy10_efficientnet_b0.yaml  optuna_galaxy10_vit_tiny.yaml  optuna_mini_cnn.yaml  optuna_mobilenetv3.yaml  optuna_resnet_18.yaml  optuna_vit_tiny.yaml  starter.yaml  starter_classification.yaml  starter_detection.yaml
scripts/: changelog-base.md  check_mutmut_registry.py  check_quality.sh  check_quality_full.sh  data_handler.py  evaluation.py  models.py  mutmut_entry.py  mutmut_run.py  release.sh  strip_notebook_outputs.py  trainer.py  update-changelog.sh  utils.py
scripts/core/: __init__.py  config.py  constants.py  logger.py
scripts/evaluation/: reporting.py  visualization.py
src/core/: __init__.py  cli.py  config.py  constants.py  environment.py  io.py  orchestrator.py  system.py
src/data_handler/: __init__.py  data_explorer.py  dataset.py  factory.py  fetcher.py  transforms.py
src/evaluation/: engine.py  metrics.py  pipeline.py  reporting.py  visualization.py
src/models/: factory.py  resnet_18_adapted.py
src/trainer/: engine.py  trainer.py
tests/: README.md  conftest.py  health_check.py  smoke_test.py  smoke_test_detection.py  test_cli_app.py  test_metadata.py  test_smoke_test.py
tests/test_architectures/: test_convnext_tiny.py  test_efficientnet_b0.py  test_factory.py  test_fasterrcnn.py  test_mini_cnn.py  test_morphing.py  test_resnet_18.py  test_timm_backbone.py  test_vit_tiny.py
tests/test_config/: test_architecture_config.py  test_augmentation_config.py  test_config_init.py  test_cross_validator.py  test_dataset_config.py  test_engine_config.py  test_evaluation_config.py  test_export_config.py  test_from_recipe.py  test_hardware_config.py  test_infrastructure_config.py  test_manifest.py  test_models_config.py  test_optuna_config.py  test_telemetry_config.py  test_training_config.py  test_types.py
tests/test_core/: test_cli.py  test_metadata.py  test_rootorchestrator.py  test_task_registry.py
tests/test_data_handler/: test_cifar_converter.py  test_data_explorer.py  test_data_factory.py  test_dataset.py  test_detection_data.py  test_dispatcher.py  test_fetcher.py  test_galaxy10_converter.py  test_loader.py  test_pennfudan_fetcher.py  test_synthetic.py  test_transforms.py
tests/test_environment/: test_distributed.py  test_guards.py  test_hardware.py  test_policy.py  test_reproducibility.py  test_reproduciblity.py
tests/test_evaluation/: test_detection_visualization.py  test_evaluation_engine.py  test_evaluation_metrics.py  test_evaluation_pipeline.py  test_evaluator.py  test_pipeline.py  test_reporting.py  test_tta.py  test_visualization.py
tests/test_export/: test_onnx_exporter.py  test_validation.py
tests/test_io/: test_io.py  test_serialization.py
tests/test_logger/: test_env_reporter.py  test_logger.py  test_progress.py  test_reporter.py
tests/test_models/: test_efficientnet_b0.py  test_factory.py  test_mini_cnn.py  test_resnet_18.py  test_resnet_18_adapted.py  test_vit_tiny.py
tests/test_optimization/: test_builders.py  test_config_builder.py  test_early_stopping.py  test_exporters.py  test_metric_extractor.py  test_objective.py  test_orchestrator.py  test_orchestrator_modules.py  (+5 more)
tools/: smoke_test.py  unit_test.py
visionforge.egg-info/: PKG-INFO
(+103 files in other folders)
